<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ciya</string>

    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Find a party</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="facebook_app_id">1573408099566145</string>
    <string name="eventCategoryView">Category</string>
    <string name="upcoming">Up Coming Events</string>
    <string name="prompt_name">First Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="emailAddress">Email</string>
    <string name="action_reload">reload</string>

    <string name="login_activity_label">Sinch Messaging Tutorial</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="message_elipses">Message…</string>
    <string name="logout">Logout</string>
    <string name="action_chat">switch_chat</string>

    <string name="search_hint">Username</string>
    <string name="findContact">Contact</string>
    <string name="action_invite_friend">Invite</string>
    <string name="invitation">INVITES</string>

    <string-array name="public_private">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <!-- Material Design Theme -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_profile_page">Edit Profile</string>
    <string name="nav_item_preferences">Event Filter (ni)</string>
    <string name="nav_item_settings">Settings (ni)</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_logout">Sign Out</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_profile_page</item>
        <item>@string/nav_item_preferences</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_about</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_messages">PlaceHolder3</string>
    <string name="title_friends">PlaceHolder2</string>
    <string name="title_home">PlaceHolder1</string>
    <string name="search_locate">search</string>
    <string name="location_select_hint">Search for location or drop pin</string>
    <string name="public_text">PUBLIC</string>
    <string name="friends_text">FRIENDS</string>
    <string name="private_text">PRIVATE</string>

    <string name="action_create_new">new event</string>
    <string name="versionNumber">1.5.1</string>

    <string name="rate_app_link">Rate this app.</string>
    <string name="license">Licenses</string>
    <string name="apache_license">Apache License, Version 2.0</string>
    <string name="icon_credit">Icon made by Freepik.com from www.flaticon.com is licensed under CC BY 3.0</string>
    <string name="icon_credit2">Icon provided by icons8 as Creative Commons Attribution-NoDerivs 3.0 Unported</string>
    <string name="attributions">Attributions</string>
    <string name="slidingTabLicense">Sliding Tab Layout</string>
    <string name="action_edit_event">Edit Event</string>
    <string name="action_delete_event">Cancel Event</string>
    <string name="remove">Remove</string>
    <string name="pending">Pending</string>
    <string name="accept">Accept</string>


</resources>
