<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_switch_chat"
        android:title="@string/action_chat"
        android:icon="@drawable/ic_action_chat"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="50"
        android:title="@string/action_invite_friend"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_event"
        android:orderInCategory="75"
        android:title="@string/action_edit_event"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_event"
        android:orderInCategory="80"
        android:title="@string/action_delete_event"
        android:showAsAction="never"/>


</menu>